--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -44,9 +44,10 @@
     align-items: center ;
     justify-content: center;
     width: 5rem;
-    height: 4rem;
+    height: 5rem;
 
     img{
+        padding: 0.5rem;
         width: 100%;
         height: 100%
     };
