--- a/src/style.css
+++ b/src/style.css
@@ -36,9 +36,10 @@
   align-items: center;
   justify-content: center;
   width: 5rem;
-  height: 4rem;
+  height: 5rem;
 }
 .logo img {
+  padding: 0.5rem;
   width: 100%;
   height: 100%;
 }
@@ -52,30 +53,28 @@
   background: black;
 }
 
-nav {
-  display: flex;
-  background-color: #1e1e1e;
-  border-radius: 10px;
-  padding: 0;
-}
-nav ul {
-  list-style: none;
-  display: flex;
+*, *::before, *::after {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  box-sizing: border-box;
 }
-nav ul li {
-  flex: 1;
-  text-align: center;
+
+html {
+  scroll-behavior: smooth;
 }
-nav ul li a {
-  display: block;
-  padding: 10px 20px;
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-  transition: background 0.3s;
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  font-weight: 400;
+  margin: 0;
+  padding: 2rem;
+  gap: 2rem;
+  box-sizing: border-box;
+  color: #333;
 }
 nav ul li a:hover {
   background: #ff3b3f;
@@ -110,7 +109,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Titillium Web", serif;
+  font-family: sans-serif;
   font-weight: 400;
   margin: 0;
   padding: 2rem;
