--- a/src/style.css
+++ b/src/style.css
@@ -25,10 +25,7 @@
 }
 .navigation ul li a:hover {
   background: #ff3b3f;
-}
-.navigation ul li.active a {
-  background: linear-gradient(to right, #ff3b3f, #e62e34);
-  border-radius: 10px 0 0 10px;
+  transition: 3s;
 }
 
 .logo {
@@ -50,7 +47,7 @@
   justify-content: center;
   width: 80rem;
   height: 30rem;
-  background: black;
+  background: blue;
 }
 
 *, *::before, *::after {
@@ -75,6 +72,12 @@ main {
   gap: 2rem;
   box-sizing: border-box;
   color: #333;
+}
+  padding: 10px 20px;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background 0.3s;
 }
 nav ul li a:hover {
   background: #ff3b3f;
