--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,10 @@
 }
 .navigation ul li a:hover {
   background: #ff3b3f;
-  transition: 3s;
+}
+.navigation ul li.active a {
+  background: linear-gradient(to right, #ff3b3f, #e62e34);
+  border-radius: 10px 0 0 10px;
 }
 
 .logo {
@@ -33,10 +36,9 @@
   align-items: center;
   justify-content: center;
   width: 5rem;
-  height: 5rem;
+  height: 4rem;
 }
 .logo img {
-  padding: 0.5rem;
   width: 100%;
   height: 100%;
 }
@@ -47,32 +49,28 @@
   justify-content: center;
   width: 80rem;
   height: 30rem;
-  background: blue;
+  background: black;
 }
 
-*, *::before, *::after {
+nav {
+  display: flex;
+  background-color: #1e1e1e;
+  border-radius: 10px;
+  padding: 0;
+}
+nav ul {
+  list-style: none;
+  display: flex;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  overflow: hidden;
 }
-
-html {
-  scroll-behavior: smooth;
+nav ul li {
+  flex: 1;
+  text-align: center;
 }
-
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: sans-serif;
-  font-weight: 400;
-  margin: 0;
-  padding: 2rem;
-  gap: 2rem;
-  box-sizing: border-box;
-  color: #333;
-}
+nav ul li a {
+  display: block;
   padding: 10px 20px;
   color: white;
   font-weight: bold;
