--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -4,5 +4,6 @@
     justify-content: center;
     width: 80rem;
     height: 30rem;
-    background: blue;
+    border: 0.1rem solid black;
+    border-radius: 1.5rem;
 }
