--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @use './components/header';
 @use './components/hero';
+@use './components/information';
 @use './components/footer';
 
 @use 'reset';
