--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 .navigation {
   display: flex;
-  background-color: #eee;
+  background-color: #b1a8ab;
   border-radius: 10px;
   padding: 0;
 }
@@ -18,14 +18,35 @@
 .navigation ul li a {
   display: block;
   padding: 2rem 2rem;
-  color: black;
+  color: #eee;
   font-weight: bold;
   text-decoration: none;
   transition: background 0.3s;
 }
 .navigation ul li a:hover {
-  background: #ff3b3f;
-  transition: 2.5s;
+  background: rgb(25, 25, 245);
+  transition: 1s;
+  border-radius: 0.4rem;
+  color: #eee;
+}
+@media (max-width: 768px) {
+  .navigation ul {
+    flex-direction: column;
+  }
+  .navigation li {
+    width: 100%;
+  }
+  .navigation a {
+    padding: 1.5rem;
+  }
+}
+@media (max-width: 480px) {
+  .navigation ul {
+    flex-direction: column;
+  }
+  .navigation a {
+    padding: 1rem;
+  }
 }
 
 .logo {
@@ -39,37 +60,74 @@
   padding: 0.5rem;
   width: 100%;
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 768px) {
+  .logo .navigation div img {
+    background: red;
+  }
+}
+@media (max-width: 480px) {
+  .logo {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 
 .hero {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80rem;
+  width: 80vw;
   height: 30rem;
   border: 0.1rem solid black;
   border-radius: 1.5rem;
 }
+@media (max-width: 768px) {
+  .hero {
+    width: 90vw;
+    height: 40vh;
+  }
+}
+@media (max-width: 480px) {
+  .hero {
+    width: 95vw;
+    height: 50vh;
+  }
+}
 
 .information {
-  width: 80rem;
-  height: 30rem;
+  width: 80vw;
+  height: 50vh;
   border: 0.1rem solid black;
   border-radius: 1.5rem;
   display: flex;
   padding: 1rem;
   gap: 1rem;
 }
+@media (max-width: 768px) {
+  .information {
+    width: 90vw;
+    height: 40vh;
+  }
+}
+@media (max-width: 480px) {
+  .information {
+    width: 95vw;
+    height: 50vh;
+  }
+}
 
 .leftside {
-  width: 100%;
+  width: 50%;
   height: 100%;
   border: 0.1rem solid black;
   border-radius: 1.5rem;
 }
 
 .rightside {
-  width: 100%;
+  width: 50%;
   height: 100%;
   border: 0.1rem solid black;
   border-radius: 1.5rem;
@@ -78,6 +136,68 @@
 .rightside img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .leftside, .rightside {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .information {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+}
+footer {
+  background-color: #b1a8ab;
+  color: #fff;
+  padding: 2em 0;
+  font-size: 0.9em;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 80vw;
+  height: 10vh;
+}
+footer p {
+  margin: 0.5em 0;
+  animation: fadeIn 1s ease-out forwards;
+}
+footer .social-icons {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 1em;
+}
+footer .social-icons a {
+  color: #fff;
+  font-size: 1.5rem;
+}
+footer .social-icons a:hover {
+  color: blue;
+}
+footer .social-icons a i {
+  transition: color 0.5s ease;
+  font-size: 115%;
+}
+@media (max-width: 768px) {
+  footer {
+    width: 90vw;
+    height: 40vh;
+  }
+}
+@media (max-width: 480px) {
+  footer {
+    width: 95vw;
+    height: 50vh;
+  }
 }
 
 *, *::before, *::after {
@@ -102,23 +222,5 @@ main {
   gap: 2rem;
   box-sizing: border-box;
   color: #333;
-}/*# sourceMappingURL=style.css.map */  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: sans-serif;
-  font-weight: 400;
-  margin: 0;
-  padding: 2rem;
-  gap: 2rem;
-  box-sizing: border-box;
-  color: #333;
+  background: #ECECD9;
 }/*# sourceMappingURL=style.css.map */
