--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -8,7 +8,6 @@
   html {
     scroll-behavior: smooth;
   }
-  
   main {
     display: flex;
     flex-direction: column;
@@ -21,6 +20,7 @@
     gap: 2rem;
     box-sizing: border-box;
     color: #333;
-  }
+    background: #ECECD9;
 
- 
+    
+}
