--- a/front-end/assets/css/style.css
+++ b/front-end/assets/css/style.css
@@ -25,10 +25,7 @@
 }
 .navigation ul li a:hover {
   background: #ff3b3f;
-}
-.navigation ul li.active a {
-  background: linear-gradient(to right, #ff3b3f, #e62e34);
-  border-radius: 10px 0 0 10px;
+  transition: 3s;
 }
 
 .logo {
@@ -36,9 +33,10 @@
   align-items: center;
   justify-content: center;
   width: 5rem;
-  height: 4rem;
+  height: 5rem;
 }
 .logo img {
+  padding: 0.5rem;
   width: 100%;
   height: 100%;
 }
@@ -49,54 +47,61 @@
   justify-content: center;
   width: 80rem;
   height: 30rem;
-  background: red;
+  border: 0.1rem solid black;
+  border-radius: 1.5rem;
 }
 
-nav {
+.information {
+  width: 80rem;
+  height: 30rem;
+  border: 0.1rem solid black;
+  border-radius: 1.5rem;
   display: flex;
-  background-color: #1e1e1e;
-  border-radius: 10px;
-  padding: 0;
+  padding: 1rem;
+  gap: 1rem;
 }
-nav ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+
+.leftside {
+  width: 100%;
+  height: 100%;
+  border: 0.1rem solid black;
+  border-radius: 1.5rem;
 }
-nav ul li {
-  flex: 1;
-  text-align: center;
+
+.rightside {
+  width: 100%;
+  height: 100%;
+  border: 0.1rem solid black;
+  border-radius: 1.5rem;
 }
-nav ul li a {
-  display: block;
-  padding: 10px 20px;
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-  transition: background 0.3s;
-}
-nav ul li a:hover {
-  background: #ff3b3f;
-}
-nav ul li.active a {
-  background: linear-gradient(to right, #ff3b3f, #e62e34);
-  border-radius: 10px 0 0 10px;
-}
-nav ul li.menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-nav ul li.menu .menu-icon {
-  margin-left: 5px;
-  font-size: 18px;
-  color: white;
+.rightside img {
+  width: 100%;
+  height: 100%;
 }
 
 *, *::before, *::after {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  font-weight: 400;
+  margin: 0;
+  padding: 2rem;
+  gap: 2rem;
+  box-sizing: border-box;
+  color: #333;
+}/*# sourceMappingURL=style.css.map */in: 0;
   padding: 0;
   box-sizing: border-box;
 }
