--- a/src/scss/components/_information.scss
+++ b/src/scss/components/_information.scss
@@ -20,6 +20,7 @@
     height: 100%;
     border: 0.1rem solid black;
     border-radius: 1.5rem;
+    background: blue;
 
     img{
         width: 100%;
