--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,37 +1,44 @@
 .navigation {
-  display: flex;
-  background-color: #b1a8ab;
-  border-radius: 10px;
-  padding: 0;
-
-  ul {
+    position: sticky;
+    top: 0; /* The navigation bar will stick to the top of the viewport */
+    z-index: 1000; /* Ensures it stays above other content */
+    display: flex;
+    background-color: #b1a8ab;
+    border-radius: 0.8rem;
+    padding: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
+  
+    ul {
       list-style: none;
       display: flex;
       margin: 0;
       padding: 0;
       overflow: hidden;
-
+  
       li {
-          flex: 1;
-          text-align: center;
-
-          a {
-              display: block;
-              padding: 2rem 2rem;
-              color: #eee;
-              font-weight: bold;
-              text-decoration: none;
-              transition: background 0.3s;
-
-              &:hover {
-                  background: rgb(25, 25, 245);
-                  transition: 1s;
-                  border-radius: 0.4rem;
-                  color: #eee;
-              }
+        flex: 1;
+        text-align: center;
+  
+        a {
+          display: block;
+          padding: 2rem 2rem;
+          color: #eee;
+          font-weight: bold;
+          text-decoration: none;
+          transition: background 0.3s;
+  
+          &:hover {
+            background: rgb(25, 25, 245);
+            transition: 1s;
+            border-radius: 0.4rem;
+            color: #eee;
           }
+        }
       }
+    }
   }
+  
 
   // Add media queries for responsiveness
   @media (max-width: 768px) {
@@ -57,7 +64,7 @@
           padding: 1rem; // Further reduce padding for mobile devices
       }
   }
-}
+
 
 .logo {
   display: flex;
