--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -6,8 +6,8 @@
     height: 30rem; // Use viewport height for responsiveness
     
     border-radius: 1.5rem;
-   
-    background: white;
+    padding: 1rem;
+    
     
     // Add media queries for different screen sizes
     @media (max-width: 768px) {
