--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,7 @@
     top: 0; /* The navigation bar will stick to the top of the viewport */
     z-index: 1000; /* Ensures it stays above other content */
     display: flex;
-    background-color: #b1a8ab;
+    background-color: #FA5;
     border-radius: 0.8rem;
     padding: 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
           transition: background 0.3s;
   
           &:hover {
-            background: rgb(25, 25, 245);
+            background-color: rgb(223, 149, 74);
             transition: 1s;
             border-radius: 0.4rem;
             color: #eee;
