--- a/src/scss/components/_information.scss
+++ b/src/scss/components/_information.scss
@@ -30,9 +30,9 @@
         border-radius: 1.5rem;
         padding: 1rem;
         display: flex;
-        align-items: center;
+        align-items: left;
         gap: 0.5rem;
-        justify-content: center;
+        justify-content: left;
         flex-direction: column;
         
         /* Media query for smaller screens */
