--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -37,7 +37,7 @@ header{
         color: #eee;
         font-weight: bold;
         text-decoration: none;
-        padding: 100% 1.5rem;
+        padding: 2rem 1.5rem;
         transition: background 0.3s;
 
         &:hover {
