--- a/src/scss/components/_information.scss
+++ b/src/scss/components/_information.scss
@@ -3,8 +3,7 @@
     height: auto; /* Allow content to dictate height */
     border-radius: 1.5rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
     gap: 1rem;
     overflow: hidden;
   
@@ -23,7 +22,7 @@
     }
   
     .leftside {
-      width: 50%; /* Responsive width */
+      width: 100%; /* Responsive width */
       height: auto; /* Adjust height */
       border-radius: 1.5rem;
       padding: 1rem;
@@ -31,7 +30,7 @@
       flex-direction: column;
       justify-content: flex-start;
       gap: 0.5rem;
-  
+      background-color: #fff;
       /* Text alignment */
       text-align: left;
       overflow-wrap: break-word; /* Prevent text overflow */
@@ -48,7 +47,7 @@
       width: 50%; /* Responsive width */
       height: auto; /* Allow content to dictate height */
       border-radius: 1.5rem;
-  
+      
       img {
         width: 100%;
         height: 100%;
