--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @use './components/header';
 @use './components/hero';
 @use './components/information';
+@use './components/articles';
 @use './components/footer';
 
 @use 'reset';
